Setup link to weather api and imported css weather icons.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="weather-icons.min.css"> 
     <script src="script.js" defer></script>
     <title>Weather App</title>
+
 </head>
 <body>
-    
+    <h1>Weather App</h1>
+
+    <i class="wi wi-day-cloudy"></i>
+
+    <i class="wi wi-day-sunny wi-flip-vertical"></i>
 </body>
 </html>
